--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML PUBLIC>
 
 <html>
-
+    
+<head>
+    <title>Cascade Support</title>
+</head>
 
 <body>
 
-    My text goes here.
+    Welcome to Cascade support!
 
 </body>
 
