--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
     Welcome to Cascade support!
+    
+    We will be updating this page in the future, in the meantime, if you have any
+    questions or issues, please email natrdevelopment@gmail.com.
 
 </body>
 
