--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
 
-    Welcome to Cascade support!
+    Welcome to Cascade support! <br><br>
     
-    We will be updating this page in the future, in the meantime, if you have any
-    questions or issues, please email natrdevelopment@gmail.com.
+    We will be updating this page in the future, <br>in the meantime, if you have any
+    questions or issues, <br>please email natrdevelopment@gmail.com.
 
 </body>
 
